--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 spring.flyway.clean-disabled=true
 spring.flyway.clean-on-validation-error=false
+
+# application.properties (or use environment variables)
+twilio.account.sid=${TWILIO_ACCOUNT_SID}
+twilio.auth.token=${TWILIO_AUTH_TOKEN}
+twilio.verify.service.sid=${TWILIO_VERIFY_SERVICE_SID}   # create this in Twilio Console
+
